Fixed backend connection to launch on app startup.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">HabitsTracker</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back4app_app_id">NGh8lwSUJozGeSbrONaYjWIaq9jcJPZDmEgY7DRI</string>
+    <string name="back4app_client_key">vRXtocGXXtWqPgab4yMuV7xXy87YYTbbFgLaPgh3</string>
+    <string name="back4app_server_url">https://parseapi.back4app.com</string>
 </resources>
